--- a/example/style.css
+++ b/example/style.css
@@ -2,6 +2,7 @@ Body{
     margin: 0;
     padding: 0;
     display: flex;
+    height: 100vh;
 }
 body .partOne{
     flex: 1;
@@ -9,7 +10,7 @@ body .partOne{
     display: flex;
     flex-direction: column;
     background: color #e5e5e5; ;
-    background-image: linear-gradient(to right, blue , darkblue);
+    background-image: linear-gradient(to right, rgb(32, 32, 86) , rgb(1, 1, 35));
 }
 h1{
     color: white;
@@ -37,5 +38,11 @@ body .partTwo{
     color: white;
     background-color: palevioletred;
     display: block;  /* none; */
+    background: url(img/background-starry-sky-8.jpg);
+    background-position: center;
+    background-size: cover;
     
+}
+img{
+    width: 2rem;
 }
