--- a/example/style.css
+++ b/example/style.css
@@ -40,10 +40,14 @@ body .partOne .planets{
 body .partTwo{
     flex: 1;
     color: white;
-    display: block;  /* none; */
+    display: block;  /* none; block */
     background: url(img/background-starry-sky-8.jpg);
     background-position: center;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
 }
 img{
     width: 3rem;
@@ -71,9 +75,18 @@ article{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    padding: 3rem;
 }
 aside{
     display: flex;
     border-top:solid;
     border-bottom: solid;
+}
+.buttonBack{
+    align-self: flex-start;
+}
+#solis{
+    position: fixed;
+  /*   transform rotate 60 degres */
 }
