--- a/example/style.css
+++ b/example/style.css
@@ -3,7 +3,6 @@ Body{
     padding: 0;
     display: flex;
     height: 100vh;
- 
 }
 body .partOne{
     flex: 1;
@@ -11,28 +10,33 @@ body .partOne{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: color #e5e5e5; ;
+    background: color #e5e5e5; 
     background-image: linear-gradient(to right, rgb(32, 32, 86) , rgb(1, 1, 35));
-  
 }
 
 h1{
     color: white;
     font-family: 'Secular One', sans-serif;
     margin: 1rem;
-    padding-left: 1rem;
+    font-size: 3rem;
+}
+.headerA{
+    margin: 0;
+}
+.headerB{
+    margin: 0;
 }
 h6{
     color: rgba(255, 208, 41, 1);
     font-family: 'Lora', serif;
     margin: 1rem;
-    padding-left: 1rem;
-
+    font-size: 2rem;
 }
 body .partOne .planets{ 
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 3rem;
 }
 body .partTwo{
     flex: 1;
@@ -64,30 +68,46 @@ button{
     font-size: 9px;
 }
 .headings{
-    position: absolute;
+    align-self: flex-end;
     right: 1rem;
 }
 article{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     padding: 3rem;
+    font-family:'Roboto Condensed', sans-serif;
+    max-width: 600px;
 }
 aside{
-    display: flex;
     border-top:solid;
     border-bottom: solid;
+    max-width: 600px;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+.fromSun{
+    grid-column: 4 /span 6;
+}
+.minTemp{
+    grid-column: 4 /span 6;
+    grid-template-rows: 2;
+}
+.moons{
+    align-self: flex-start;
+    padding: 0;
+    margin: 0;
+    margin-top: 1rem;
 }
 .buttonBack{
-    align-self: flex-start;
+    align-self: flex-end;
 }
 #Solis{
     position: fixed;
-    width: 1250px;
-    height: 1250px;
+    width: 1200px;
+    height: 1200px;
     left: -1200px;
-    top: -189px;
+    top: -320px;
     border-radius: 50%;
     background: #FFD029;
     box-shadow: 0px 0px 250px rgba(255, 208, 41, 0.2);
@@ -130,14 +150,25 @@ aside{
     height: 144px; 
     border-radius: 50%;
     background: #C7AA72;
+}  
+.saturnusRing{
+    display: flex;
+    align-self: center;
+   /*  position: fixed; */
+    width: 218.23px;
+    height: 5.5px;
+   /*  left: 500px;
+    top:500px; */
+    border-radius:50%;
+    background: rgba(255, 255, 255, 0.4);
+    transform: rotate(-30deg);
+    opacity:0.5 ;
 }
-
 #Uranus{
     width: 66px;
     height: 66px;
     border-radius: 50%;
     background: #C9D4F1;
-
 }
 #Neptunus{
     width: 66px;
@@ -145,14 +176,32 @@ aside{
     border-radius: 50%;
     background: #7A91A7;
 }
-/* .sun{
-border-radius: 50%;
-position: absolute;
-width: 1278px;
-height: 1278px;
-left: -1160px;
-top: -189px;
+.blueSun{
+    border-radius: 50%;
+    position: absolute;
+    width: 1278px;
+    height: 1278px;
+    left: -1160px;
+    top: -189px;
+    background:rgb(56, 159, 223);
+    box-shadow: 0px 0px 250px rgba(255, 208, 41, 0.2);
+}
+.blueSunLight{
+    position: absolute;
+    width: 1340px;
+    height: 1340px;
+    left: -1170px;
+    top: -222px;
+    background: rgba(66, 142, 213, 0.1);
+    border-radius: 50%;
 
-background: #bcbab2;
-box-shadow: 0px 0px 250px rgba(255, 208, 41, 0.2);
-} */
+}
+.blueSunLighter{
+    position: absolute;
+    width: 1404px;
+    height: 1404px;
+    left: -1184px;
+    top: -254px;
+    border-radius: 50%;
+    background: rgba(66, 142, 213, 0.06);
+}
