--- a/example/style.css
+++ b/example/style.css
@@ -13,12 +13,12 @@ body .partOne{
     background: color #e5e5e5; 
     background-image: linear-gradient(to right, rgb(32, 32, 86) , rgb(1, 1, 35));
 }
-
 h1{
     color: white;
     font-family: 'Secular One', sans-serif;
     margin: 1rem;
     font-size: 3rem;
+   
 }
 .headerA{
     margin: 0;
@@ -31,6 +31,7 @@ h6{
     font-family: 'Lora', serif;
     margin: 1rem;
     font-size: 2rem;
+   
 }
 body .partOne .planets{ 
     display: flex;
@@ -70,6 +71,7 @@ button{
 .headings{
     align-self: flex-end;
     right: 1rem;
+    padding: 2rem;
 }
 article{
     display: flex;
@@ -179,10 +181,16 @@ aside{
 .blueSun{
     border-radius: 50%;
     position: absolute;
-    width: 1278px;
+
+    width: 1200px;
+    height: 1200px;
+    left: -1200px;
+    top: -320px;
+
+   /*  width: 1278px;
     height: 1278px;
     left: -1160px;
-    top: -189px;
+    top: -189px; */
     background:rgb(56, 159, 223);
     box-shadow: 0px 0px 250px rgba(255, 208, 41, 0.2);
 }
