--- a/example/style.css
+++ b/example/style.css
@@ -18,7 +18,6 @@ h1{
     font-family: 'Secular One', sans-serif;
     margin: 1rem;
     font-size: 3rem;
-   
 }
 .headerA{
     margin: 0;
@@ -48,6 +47,8 @@ body .partTwo{
     display: none;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 img{
     width: 3rem;
@@ -72,6 +73,7 @@ button{
     align-self: flex-end;
     right: 1rem;
     padding: 2rem;
+    margin-bottom: 0;
 }
 article{
     display: flex;
@@ -151,14 +153,16 @@ aside{
     background: #C7AA72;
 }
 .saturnusRing{
-    position: absolute;
     width: 218.23px;
     height: 5.5px;
-    left:722px ;
-    top: 380px;
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.4);
     transform: rotate(-30deg);
+}
+.saturnusRing{
+    top: 63%;
+    position: absolute;
+
 }
 .saturn-contaier{
     position: relative;
