--- a/example/style.css
+++ b/example/style.css
@@ -2,8 +2,7 @@ Body{
     margin: 0;
     padding: 0;
     display: flex;
-   
-   
+    height: 100vh;
 }
 body .partOne{
     flex: 1;
@@ -13,10 +12,6 @@ body .partOne{
     justify-content: center;
     background: color #e5e5e5; 
     background-image: linear-gradient(to right, rgb(32, 32, 86) , rgb(1, 1, 35));
-    max-width: 2000px;
-    min-width: 600px;
-    height: 100vh;
-
 }
 h1{
     color: white;
@@ -46,13 +41,11 @@ body .partTwo{
     flex: 1;
     color: white;
     background: url(img/background-starry-sky-8.jpg);
-    background-position: center;
     background-size: cover;
     display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-   
 }
 img{
     width: 3rem;
@@ -113,18 +106,10 @@ aside{
 }
 #Solis{
     position: fixed;
-
-
     width: 1278px;
     height: 1278px;
     left: -1160px;
     top: -189px;
-
-
-    /* width: 1200px;
-    height: 1200px;
-    left: -1200px;
-    top: -320px; */
     border-radius: 50%;
     background: #FFD029;
     box-shadow: 0px 0px 250px rgba(255, 208, 41, 0.2);
@@ -173,9 +158,8 @@ aside{
     transform: rotate(-30deg);
 }
 .saturnusRing{
-    top: 63%;
+    top: 50%;
     position: absolute;
-
 }
 .saturn-contaier{
     position: relative;
@@ -206,19 +190,15 @@ aside{
 .blueSun{
     border-radius: 50%;
     position: absolute;
-    width: 1200px;
-    height: 1200px;
-    left: -1200px;
-    top: -320px;
-
-   /* width: 1278px;
+    width: 1278px;
     height: 1278px;
     left: -1160px;
-    top: -189px; */
+    top: -189px;
     background:rgb(56, 159, 223);
     box-shadow: 0px 0px 250px rgba(255, 208, 41, 0.2);
+    opacity: 0.5;
 }
-/* .blueSunLight{
+.blueSunLight{
     position: absolute;
     width: 1340px;
     height: 1340px;
@@ -236,4 +216,4 @@ aside{
     border-radius: 50%;
     background: rgba(66, 142, 213, 0.06);
 }
- */
+ 
