--- a/example/style.css
+++ b/example/style.css
@@ -3,6 +3,7 @@ Body{
     padding: 0;
     display: flex;
     height: 100vh;
+    /* overflow: hidden */
 }
 body .partOne{
     flex: 1;
@@ -12,6 +13,7 @@ body .partOne{
     justify-content: center;
     background: color #e5e5e5; 
     background-image: linear-gradient(to right, rgb(32, 32, 86) , rgb(1, 1, 35));
+  
 }
 h1{
     color: white;
@@ -36,16 +38,19 @@ body .partOne .planets{
     align-items: center;
     justify-content: space-between;
     margin: 3rem;
+    min-width: 1500px;
 }
 body .partTwo{
     flex: 1;
     color: white;
     background: url(img/background-starry-sky-8.jpg);
     background-size: cover;
+    background-position: center;
     display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
 }
 img{
     width: 3rem;
@@ -56,6 +61,9 @@ footer{
     justify-content: center;
     padding: 1rem;
     margin: 1rem;
+}
+.zomcom{
+    padding: 1rem;
 }
 button{
     padding: 0.5rem;
@@ -157,23 +165,20 @@ aside{
     background: rgba(255, 255, 255, 0.4);
     transform: rotate(-30deg);
 }
+/* #Sarturnus::before{
+   content: "_______________________";
+   background-color: red;
+   border-radius:50%;
+   opacity:0.5 ;
+   transform: rotate(-30deg);
+} */
 .saturnusRing{
-    top: 50%;
+    top: 63%;
     position: absolute;
 }
 .saturn-contaier{
     position: relative;
 }
-/* .Sarturnus::before{
-    content: attr(figure);
-    align-self: center;
-    width: 218.23px;
-    height: 5.5px;
-    border-radius:50%;
-    background-color: #888888;
-    transform: rotate(-30deg);
-    opacity:0.5 ;
-}  */ 
 
 #Uranus{
     width: 66px;
