--- a/example/style.css
+++ b/example/style.css
@@ -3,6 +3,7 @@ Body{
     padding: 0;
     display: flex;
     height: 100vh;
+    background-image: linear-gradient(to right, rgb(32, 32, 86) , rgb(1, 1, 35));
     /* overflow: hidden */
 }
 body .partOne{
@@ -13,7 +14,6 @@ body .partOne{
     justify-content: center;
     background: color #e5e5e5; 
     background-image: linear-gradient(to right, rgb(32, 32, 86) , rgb(1, 1, 35));
-  
 }
 h1{
     color: white;
@@ -39,13 +39,14 @@ body .partOne .planets{
     justify-content: space-between;
     margin: 3rem;
     min-width: 1500px;
+    margin-left: 9rem;
 }
 body .partTwo{
     flex: 1;
     color: white;
-    background: url(img/background-starry-sky-8.jpg);
+/*  background: url(img/background-starry-sky-8.jpg);
     background-size: cover;
-    background-position: center;
+    background-position: center; */
     display: none;
     flex-direction: column;
     align-items: center;
@@ -166,15 +167,16 @@ aside{
     transform: rotate(-30deg);
 }
 /* #Sarturnus::before{
-   content: "_______________________";
+   content: "----------";
    background-color: red;
    border-radius:50%;
    opacity:0.5 ;
-   transform: rotate(-30deg);
+   width: 218.23px;
+    height: 5.5px;
 } */
 .saturnusRing{
-    top: 63%;
     position: absolute;
+    top: 50%;
 }
 .saturn-contaier{
     position: relative;
@@ -221,4 +223,3 @@ aside{
     border-radius: 50%;
     background: rgba(66, 142, 213, 0.06);
 }
- 
