--- a/example/style.css
+++ b/example/style.css
@@ -51,7 +51,8 @@ body .partTwo{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    
+    height: fit-content;
+    overflow: hidden;
 }
 img{
     width: 3rem;
