--- a/example/style.css
+++ b/example/style.css
@@ -130,33 +130,28 @@ aside{
     box-shadow: 0px 0px 250px rgba(255, 208, 41, 0.2);
 }
 #Mercurialis{
-   
     width: 14px;
     height: 14px;
     background: #888888;
     border-radius: 500rem;
-    
 }
 #venus{
     width: 26px;
     height: 26px;
     border-radius: 500rem;
     background: #E7CDCD;    
-    
 }
 #Tellus{
     width: 28px;
     height: 28px;
     border-radius: 500rem;
     background: #428ED5;
-    
 }
 #Mars{
     width: 14px;
     height: 14px;
     border-radius: 500rem;
     background: #EF5F5F;
-   
 }
 #Lovis{
     width: 188px;
@@ -169,7 +164,6 @@ aside{
     height: 144px; 
     border-radius: 500rem;
     background: #C7AA72;
- 
 }
 .saturnusRing{
     width: 218.23px;
@@ -188,13 +182,12 @@ aside{
 } */
 .saturnusRing{
     position: absolute;
-    top: 50%;
-    
+    top: 46%;
+    left: 60%;
 }
 .saturn-contaier{
     position: relative;
 }
-
 #Uranus{
     width: 66px;
     height: 66px;
